# facialSketchRecognition

./: .gitignore  CMakeLists.txt  README.md  lda.patch
include/: descriptors.hpp  filters.hpp  kernelproto.hpp  transforms.hpp  utils.hpp
samples/: demoDescriptors.cpp  demoGaborShape.cpp  demoHAOG.cpp  demoKernelProtoDRS.cpp  demoKernelProtoPRS.cpp  demoLFDA.cpp  demoLRBP.cpp  statisticalAnalysis.cpp  test.cpp
src/: descriptors.cpp  filters.cpp  kernelproto.cpp  transforms.cpp  utils.cpp
